SW-2518 add JWT authetication to consumer
